# portfolio

./: .gitignore  README.md  about.html  curriculum.html  dev_server.py  index.html  new_version.html  pyproject.toml
docs/: BLOG_POSTS.md  DESIGN_CHOICES.md
scripts/: main.js
styles/: new_version.css  style.css
