[project]
name = "portfolio-dev-server"
version = "0.1.0"
description = "Local dev server for the portfolio static site."
requires-python = ">=3.11"

[project.scripts]
dev = "dev_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dev_server"]
